--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f;
-    color: #3;
+    background-color: #f0f0f;
+    color: #333;
     display: flex;
     justify-content: center;
     align-items: center;
