--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     background-color: #f0f0f0;
     color: #333;
     display: flex;
-    justify-content: center;
+    justify-content: cente;
     align-items: center;
     height: 100vh;
     margin: 0;
