--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 2px;
-    border: 3px;
+    margin: 0;
+
 }
 
 
