--- a/style.css
+++ b/style.css
@@ -27,9 +27,7 @@ h1 {
 
 
 .input-container {
-    display: flx;
-    justify-content: ;
-    align-items: center;
-    
+    display: flex;
+    justify-content: space-between;
 }
 
