--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ input[type="text"] {
 }
 
 button {
-    padding: px 30px;
+    padding: 10px 15px;
     background-color: #4CAF50;
     color: white;
     border: none;
